--- a/project/html/pages/projects.ejs
+++ b/project/html/pages/projects.ejs
@@ -9,7 +9,7 @@
   <div class="page-header">
 
   
-    <h1>project page!</h1>
+    <h1>projects page!</h1>
   </div>
 
   <p>Click on the button for a surprise.</p>
