added open weather api call.

--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -12,7 +12,13 @@
     <h1>Hello World from me!</h1>
   </div>
 
-  <p>Click on the button for a surprise.</p>
+  <div class="city">
+
+  </div>
+
+  <div class="temp">
+
+  <p> Click on the button for a surprise.</p>
 
   <button onClick="showPicture()" class="btn btn-dark">Click me</button>
 
