--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -20,8 +20,11 @@
 <!-- first we import jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+
 <!-- then bootstrap -->
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<script>var apiKey="<%= API_KEY_OPEN_WEATHER %>";</script>
 
 <!-- then our app's own js file -->
 <script src="js/main.js"></script>
