--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -24,7 +24,7 @@
 <!-- then bootstrap -->
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-<script>var apiKey="<%= API_KEY_OPEN_WEATHER %>";</script>
+<script> var apiKey="<%= process.env.API_KEY_OPEN_WEATHER %>"; </script>
 
 <!-- then our app's own js file -->
 <script src="js/main.js"></script>
